@@ -1,4 +1,4 @@
-# We can split Footnotes in four files:
+# Footnotes is divided in four files:
 #
 # * textmate_footnotes.rb: Is the core and adds the debug options at the bottom
 #   of each page;
@@ -14,17 +14,25 @@
 # The footnotes are applied in all actions under development. If You want to
 # change this behaviour, check the textmate_initialize.rb file.
 #
-# And by default, the last two files are only performed in MacOSX. If Your
-# editor support opening files like Textmate, e.g. txmt://open?url=file://, You
-# can put in Your environment file the following line:
+# And by default, the last two files are only loaded in MacOSX. If your editor
+# support opening files like Textmate, e.g. txmt://open?url=file://, you can put
+# in your environment file the following line:
 #
 #   FootnotesFilter.textmate_prefix = "editor://open?file://"
 #
-# And if You want to use Your own stylesheet, You can disable the Footnotes
+# If You want to use your own stylesheet, you can disable the Footnotes
 # stylesheet with:
 #
 #   FootnotesFilter.no_style = true
-# 
+#
+# Footnotes try to append at the end of the page, but if your page have a div
+# with id "tm_footnotes", Footnotes will be inserted into this div.
+#
+# In Footnotes 3.1, you also have the ability to cherry pick which notes do you
+# want to use, simply doing:
+#
+#   FootnotesFilter.notes = [:session, :cookies, :params, :filters, :routes, :log, :general]
+#
 if (ENV['RAILS_ENV'] == 'development')
   # Windows doesn't have 'uname', so rescue false
   ::MAC_OS_X = (`uname`.chomp == 'Darwin') rescue false
